# exam-4

./: CMakeLists.txt  Doxyfile  Doxyfile.txt  Template_8hpp.js  Template_8hpp_source.html  annotated.html  annotated_dup.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_type.html  globals.html  globals_func.html  graph_legend.html  menudata.js  navtreedata.js  navtreeindex0.js  publish.yaml  structEnableIf.html  structEnableIf_3_01true_00_01Type_01_4-members.html  structEnableIf_3_01true_00_01Type_01_4.html  structEnableIf_3_01true_00_01Type_01_4.js
.github/workflows/: c-cpp.yml  publish.yaml  static.yml
html/: Template_8hpp.html  Template_8hpp.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  globals_func.html  index.html  navtreedata.js
html/search/: functions_0.js  searchdata.js
include/: Template.h
rtf/: refman.rtf
search/: all_3.js  classes_0.js  functions_1.js  searchdata.js  typedefs_0.js
src/: CMakeLists.txt  Template.hpp  print_ip.cpp
test/: CMakeLists.txt  test_print_ip  test_print_ip.cpp
